# ttrpg-dev

./: .gitignore  README.md  dndm.md
.github/: copilot-instructions.md
dndm/: Cargo.toml  README.md  build.sh
dndm/src/: config.rs  main.rs  service.rs  session.rs
dndm/src/ui/: display.rs  mod.rs  tui.rs
qvtt-data/Logs/: .5cb575b458964a94b7cc3ece85c78fc48828bfb5-audit.json
vtt/: main.mjs  package-lock.json  package.json
vtt/client/: _types.mjs  client.mjs  config.mjs  game.mjs  hooks.mjs  ui.mjs
vtt/client/applications/: _types.mjs  handlebars.mjs
vtt/client/audio/: sound.mjs
vtt/client/av/: master.mjs
vtt/client/canvas/: board.mjs  loader.mjs
vtt/client/data/: _module.mjs  _types.mjs  calendar.mjs  terrain-data.mjs
vtt/client/documents/: _types.mjs  active-effect.mjs  actor.mjs  cards.mjs  chat-message.mjs  combat.mjs  combatant.mjs  fog-exploration.mjs  folder.mjs  journal-entry-page.mjs  macro.mjs  playlist.mjs  region.mjs  roll-table.mjs  scene.mjs  token.mjs
vtt/client/helpers/: localization.mjs
vtt/client/utils/: _module.mjs
vtt/common/: constants.mjs
vtt/common/abstract/: _types.mjs  data.mjs  document.mjs  embedded-collection-delta.mjs  embedded-collection.mjs  type-data.mjs
vtt/common/data/: fields.mjs
vttdata/Config/: options.json
website/: ANNOUNCEMENT_SYSTEM.md  BUTTON_COMPONENTS_GUIDE.md  CALENDAR_COMPONENTS.md  CALENDAR_REFACTORING_COMPLETE.md  Princes of the Apocalypse.md  Session-004.md  WEATHER_SYSTEM_PHASE1.md  _template.md  astro.config.mjs  package.json  pnpm-lock.yaml
website/src/: consts.ts  content.config.ts
(+1008 files in other folders)
