[package]
name = "dndm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dndm"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
crossterm = "0.27"
ratatui = "0.24"
tokio = { version = "1.0", features = ["process", "macros", "rt-multi-thread"] }
directories = "5.0"
